# SonATA

./: .gitignore  COPYING  LICENSE.txt  README  doxygen.config
CppUnit/: .gitignore  ChangeLog  Makefile.am  configure.in  mkinstalldirs  reconfig
CppUnit/doc/: Makefile.am
CppUnit/samples/: .gitignore  ExampleTestCase.cpp  ExampleTestCase.h  Makefile.am  TestRunner.mak  TestRunnerExample.cpp  TestTest.h  runtests
CppUnit/test/: Makefile.am
scripts/: .gitignore  .sse-startup-env-vars  1beam-dualpol-800KHz-24dx-env-vars.tcsh  2beam-dualpol-800KHz-48dx-env-vars.tcsh  3beam-dualpol-800KHz-72dx-env-vars-batch.sh  3beam-dualpol-800KHz-72dx-env-vars.tcsh  3beam-xpol-800KHz-72dx-env-vars.tcsh  Makefile.am  bandwidth-test.tcsh  configure.in  create_packages  data-capture-2beam-1500-1520MHz.tcl  data-capture-kepler-2beam.tcl  data-capture-replay-env-vars.tcsh  data-collect-2beam-env-vars.tcsh  data-collect-kepler-2beam-800KHz.tcl  get_packages  getdelaytargets.tcsh  getphasetargets.tcsh  gettargets.tcsh  install-sig-pkg.tcsh  jane-1beam-xpol-800KHz-24dx-env-vars.tcsh  jane-3beam-env-vars.tcsh  jane-beam2-xpol-800KHz-24dx-env-vars.tcsh  jane-kepler-1beam-20MHz.tcl  jane-rfiscan-beam1-4l.tcl  jane-test-pulse.tcl  jane-test.tcl  jon-kepler1.tcl  jon-kepler2.tcl  kepler-demo-dualpol.tcl  kes-mars-express-1beam-500MHz.tcl  kes-rosetta-2beam-500MHz.tcl  kes-sirocco-1beam-dualpol-400KHz-64f-env-vars.tcsh  kes-sirocco-1beam-xpol-1_6MHz_32f_env_vars.tcsh  kes-sirocco-1beam-xpol-3_2MHz_32f_env_vars.tcsh  kes-sirocco-1beam-xpol-400KHz-64f-env-vars.tcsh  kes-sirocco-1beam-xpol-800KHz-64f-env-vars.tcsh  kes-sirocco-1beam-xpol-800KHz-env-vars.tcsh  kes-sirocco-2beam-dualpol-400KHz-64f-env-vars.tcsh  (+86 more)
scripts/jane/: Makefile.am  jane-3beam-env-vars.tcsh
scripts/kes/: Makefile.am  kes-deep-impact-2beam-500MHz.tcl  kes-deep-impact-3beam-200MHz.tcl  kes-deep-impact-3beam-500MHz.tcl  kes-gettargets.tcsh  kes-kepler-3beam-350MHz.tcl  kes-mars-express-2beam-500MHz.tcl  kes-rosetta-3beam-200MHz.tcl  kes-rosetta-3beam-350MHz.tcl  kes-rosetta-3beam-500MHz.tcl  kes-sirocco-1beam-dualpol-400KHz-64f-env-vars.tcsh  kes-sirocco-1beam-xpol-1_6MHz_32f_env_vars.tcsh  kes-sirocco-1beam-xpol-3_2MHz_32f_env_vars.tcsh  kes-sirocco-1beam-xpol-800KHz-64f-env-vars.tcsh  kes-sirocco-1beam-xpol-800KHz-env-vars.tcsh  kes-sirocco-2beam-dualpol-400KHz-64f-env-vars.tcsh  kes-sirocco-2beam-dualpol-800KHz-64f-env-vars.tcsh  kes-sirocco-test-500MHz.tcl  kes-sirocco-test-64f.tcl  kes-sirocco-xpol-400KHz-64f-env-vars.tcsh  kes-switchConfigFile-2beam-2dx.tcsh  kes-tscope-vger-full-array-beam1.tcl  kes-vger-3beam-20MHz.tcl  kes_rosetta-1beam-500MHz.tcl
sig-pkg/: .gitignore  Makefile.am  Versions  configure.in  reconfig
sig-pkg/ATApackets/: .cproject  .project  Makefile.am  Makefile.common  configure.in  cvsignore
sig-pkg/channelizer/: .cproject  .project  configure.in
sig-pkg/daddLib/: .cproject  .project  Makefile.am  configure.in
sig-pkg/dfbLib/: .cproject  .project  Makefile.am  configure.in
sig-pkg/dx/: .cproject  .project  Makefile.am  configure.in  verifyHeaderInMakefile  verifySourceCheckin
sig-pkg/filters/: H256c1f0o.flt  JTLowPass256f5er25ov.flt  JTLowPass256f7er25ov.flt  JTLowPassER256c5f25o.flt  JTLowPassER256c7f25o.flt  LS128c10f25o.flt  LS16c10f25o.flt  LS16c10f25o70d.flt  LS256c10f18o.flt  LS256c10f20o.flt  LS256c10f21875o70d.flt  LS256c10f21o.flt  LS256c10f25o.flt  LS256c10f25o60d.flt  LS256c10f25o70d.flt  LS256c7f18o.flt  LS256c7f20o.flt  LS256c7f21o.flt  LS256c7f25o.flt  LS2c10f10o.flt  LS2c10f25o.flt  LS2c3f0o.flt  LS2c4f0o.flt  LS32c10f25o.flt  LS32c10f25o70d.flt  LS4c10f10o.flt  LS4c10f25o.flt  LS4c3f0o.flt  LS4c4f0o.flt  LS512c10f25o60d.flt  LS512c10f25o70d.flt  LS64c10f25o.flt  LS64c10f25o70d.flt  LS64c7f25o.flt  LS8c10f25o.flt  LS8c10f25o70d.flt  LS8c2f25o40d.flt  Lowpass_Eq_256_5_1.333.txt.flt  Lowpass_Eq_256_7_1.333.txt.flt  Makefile.am  (+1 more)
sig-pkg/gaussLib/: .cproject  .project  configure.in
sig-pkg/include/: cycle.h
sig-pkg/sonataLib/: .cproject  .project  Makefile.am  configure.in
sig-pkg/spectraLib/: .cproject  .project  Makefile.am  configure.in
sig-pkg/utilities/: Makefile.am  configure.in  reconfig
sse-pkg/: .gitignore  INSTALL  Makefile.am  NEWS  README  SseVersion  configure.in  doxygen.config  reconfig  verifyHeaderInMakefile  verifyMakefileVariablesDefined
sse-pkg/GPIBInterfaceLib/: AttnBank.cpp  AttnBank.h  GPIBDevice.cpp  GPIBDevice.h  Makefile.am  SCU.cpp  SCU.h  SignalGenerator.cpp  SignalGenerator.h
sse-pkg/aaplusLib/: .gitignore  AA+.h  AA+.htm  AA2DCoordinate.h  AA3DCoordinate.h  AAAberration.cpp  AAAberration.h  AAAngularSeparation.cpp  AAAngularSeparation.h  AABinaryStar.cpp  AABinaryStar.h  AACoordinateTransformation.cpp  AACoordinateTransformation.h  AADate.cpp  AADate.h  AADiameters.cpp  AADiameters.h  AADynamicalTime.cpp  AADynamicalTime.h  AAEarth.cpp  AAEarth.h  AAEaster.cpp  AAEaster.h  AAEclipses.cpp  AAEclipses.h  AAEclipticalElements.cpp  AAEclipticalElements.h  AAElementsPlanetaryOrbit.cpp  AAElementsPlanetaryOrbit.h  AAElliptical.cpp  AAElliptical.h  AAEquationOfTime.cpp  AAEquationOfTime.h  AAEquinoxesAndSolstices.cpp  AAEquinoxesAndSolstices.h  AAFK5.cpp  AAFK5.h  AAGalileanMoons.cpp  AAGalileanMoons.h  AAGlobe.cpp  (+82 more)
sse-pkg/boostLib/: README
sse-pkg/database/: .gitignore  Makefile.am  convertGalGridToTargetCat.cpp  convertReconsToTargetCat.cpp  convertSimbadToTargetCat.cpp  convertTychoToTargetCat.cpp  createAllskyStarcat.cpp  createEclipticSurveyTargetCat.cpp  createGalSurveyGridOutline.cpp  createGalSurveyTargetCat.cpp  createRaDecRegionTargetCat.cpp  createSpacecraftCatalog  quiet-sky.data  recreate-db  seeker.ao-starlist.data  seeker.schema  seeker.spacecraft.data  target-ids-assigned.txt  targetgrid.cpp
sse-pkg/doppler/: .gitignore  Makefile.am  README.dreher-doppler-doc  README.ephemeris  README.jpl.ephemeris  README.todo  Testlib.cpp  Testlib.h  ast_const.h  astro.c  astro.h  convert-jpl-horiz-to-ata-ephem  convert-jpl-xyz-data  doppler.c  doppler.h  doppler_work.c  doppler_work.h  earth-ephem-2002.xyz  email-jpl-ephem-xyz-requests  (+7 more)
(+1363 files in other folders)
