
# Scripts for running SonATA
#
# Environmental Variable files *env-vars.tcsh or *env-vars-batch.sh
#	Assignment of logical channelizers and dxs to specific hardware
#	and command line parameters
# SwitchConfigFile* loads the corresponding internal configuration file.
#
# Tcl files
#	Parameter definition and commands for the seeker
#
# Cron session files *session.sh
#	Files executed by cron to run the system in batch mode.

scriptsdir = $(prefix)/scripts/jane/

#localinstall:
#	make install prefix=`pwd`/scripts

# this creates the scripts directory
scripts_SCRIPTS = \
	jane-3beam-env-vars.tcsh \
	jane-test-pulse.tcl \
	jane-test.tcl
