
# Scripts for running SonATA
#
# Environmental Variable files *env-vars.tcsh or *env-vars-batch.sh
#	Assignment of logical channelizers and dxs to specific hardware
#	and command line parameters
# SwitchConfigFile* loads the corresponding internal configuration file.
#
# Tcl files
#	Parameter definition and commands for the seeker
#
# Cron session files *session.sh
#	Files executed by cron to run the system in batch mode.

scriptsdir = $(prefix)/scripts/kes/

#localinstall:
#	make install prefix=`pwd`/scripts

# this creates the scripts directory
scripts_SCRIPTS = \
	kes-deep-impact-2beam-500MHz.tcl \
	kes-deep-impact-3beam-200MHz.tcl \
	kes-deep-impact-3beam-500MHz.tcl \
	kes-gettargets.tcsh \
	kes-kepler-3beam-350MHz.tcl \
	kes-mars-express-1beam-500MHz.tcl \
	kes-mars-express-2beam-500MHz.tcl \
	kes_rosetta-1beam-500MHz.tcl \
	kes-rosetta-2beam-500MHz.tcl \
	kes-rosetta-3beam-200MHz.tcl \
	kes-rosetta-3beam-350MHz.tcl \
	kes-rosetta-3beam-500MHz.tcl \
	kes-sirocco-1beam-dualpol-400KHz-64f-env-vars.tcsh \
	kes-sirocco-1beam-xpol-1_6MHz_32f_env_vars.tcsh \
	kes-sirocco-1beam-xpol-3_2MHz_32f_env_vars.tcsh \
	kes-sirocco-1beam-xpol-400KHz-64f-env-vars.tcsh \
	kes-sirocco-1beam-xpol-800KHz-64f-env-vars.tcsh \
	kes-sirocco-1beam-xpol-800KHz-env-vars.tcsh \
	kes-sirocco-2beam-dualpol-400KHz-64f-env-vars.tcsh \
	kes-sirocco-2beam-dualpol-800KHz-64f-env-vars.tcsh \
	kes-sirocco-2beam-test-64f.tcl \
	kes-sirocco-test-400KHz-500MHz.tcl \
	kes-sirocco-test-500MHz.tcl \
	kes-sirocco-test-64f.tcl \
	kes-sirocco-test-800KHz-500MHz.tcl \
	kes-sirocco-test.tcl \
	kes-sirocco-xpol-400KHz-64f-env-vars.tcsh \
	kes-switchConfigFile-2beam-2dx.tcsh \
	kes-tscope-vger-full-array-2.tcl \
	kes-tscope-vger-full-array-beam1.tcl \
	kes-tscope-vger-full-array.tcl \
	kes-vger-1beam-20MHz.tcl \
	kes-vger-3beam-20MHz.tcl
