################################################################################
#
# File:    Makefile.am
# Project: OpenSonATA
# Authors: The OpenSonATA code is the result of many programmers
#          over many years
#
# Copyright 2011 The SETI Institute
#
# OpenSonATA is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
# 
# OpenSonATA is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with OpenSonATA.  If not, see<http://www.gnu.org/licenses/>.
# 
# Implementers of this code are requested to include the caption
# "Licensed through SETI" with a link to setiQuest.org.
# 
# For alternate licensing arrangements, please contact
# The SETI Institute at www.seti.org or setiquest.org. 
#
################################################################################


# Filters for the Channelizer and Dx DFB
# get installed in the filters directory during an install

filtersdir = $(prefix)/filters/

# this creates the filters directory
filters_DATA =

dist_filters_DATA = \
	LS16c10f25o70d.flt \
	LS256c10f21875o70d.flt \
	LS256c10f25o60d.flt \
	LS256c10f25o70d.flt \
	LS32c10f25o70d.flt \
	LS512c10f25o60d.flt \
	LS512c10f25o70d.flt \
	LS64c10f25o70d.flt \
	LS8c10f25o70d.flt \
	LS8c2f25o40d.flt 